# clip-image-search

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.override.yml  docker-compose.yml  pyproject.toml
app/: api.py  deps.py  main.py  models.py
app/core/: config.py  db.py
app/migrations/: env.py
app/migrations/versions/: 4c63b3dba5dc_image_cascade_delete_embedding.py  b79b94436109_init.py  dcbe29b7326e_init_schema.py
data/: embeddings.pickle
scripts/: backend_pre_start.py  generate_embeddings.py  prestart.sh
src/scripts/: generate_embeddings.py
static/: index.html
tests/: test_app.py
